; ModuleID = '/home/carl/AnghaBench/git/extr_read-cache.c_mem_pool__ce_alloc.c'
source_filename = "/home/carl/AnghaBench/git/extr_read-cache.c_mem_pool__ce_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }
%struct.mem_pool = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cache_entry* (%struct.mem_pool*, i64)* @mem_pool__ce_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cache_entry* @mem_pool__ce_alloc(%struct.mem_pool* %0, i64 %1) #0 {
  %3 = alloca %struct.mem_pool*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.cache_entry*, align 8
  store %struct.mem_pool* %0, %struct.mem_pool** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.mem_pool*, %struct.mem_pool** %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i32 @cache_entry_size(i64 %7)
  %9 = call %struct.cache_entry* @mem_pool_alloc(%struct.mem_pool* %6, i32 %8)
  store %struct.cache_entry* %9, %struct.cache_entry** %5, align 8
  %10 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  %11 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %10, i32 0, i32 0
  store i32 1, i32* %11, align 4
  %12 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  ret %struct.cache_entry* %12
}

declare dso_local %struct.cache_entry* @mem_pool_alloc(%struct.mem_pool*, i32) #1

declare dso_local i32 @cache_entry_size(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
